# orca-asr

./: README.md
client/: client.py  config.yaml  consumer.py  recorder.py
runtime/core/ace_socket/: CMakeLists.txt  base64.h  first_time_connect.cc  group.cc  group.h  hub_state.h  on_http_request.cc  on_pcm_data.cc  on_tcp_ready.cc  on_websocket.cc  participant.cc  participant.h  participant_acceptor.cc  participant_acceptor.h  protocol_hub.cc  protocol_hub.h  recorder.cc  recorder.h  wait_end_thread.cc  wait_end_thread.h
web/static/css/: style.css
web/templates/: index.html
